Han, Zhou, and Chinese empire pictures

--- a/localization/english/missions/han_missions_warring_l_english.yml
+++ b/localization/english/missions/han_missions_warring_l_english.yml
@@ -8,58 +8,58 @@
  #Missions
 
  han_warring_missions_task_1: "Lobby Zhao"
- han_warring_missions_task_1_DESC: ""
+ han_warring_missions_task_1_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  han_warring_missions_task_2: "Partition Chu"
- han_warring_missions_task_2_DESC: ""
+ han_warring_missions_task_2_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  han_warring_missions_task_3: "Legacy of Shen Buhai"
- han_warring_missions_task_3_DESC: ""
+ han_warring_missions_task_3_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  han_warring_missions_task_4: "Coalition Qin"
- han_warring_missions_task_4_DESC: ""
+ han_warring_missions_task_4_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  han_warring_missions_task_5: "Protect Northern Commanderies"
- han_warring_missions_task_5_DESC: ""
+ han_warring_missions_task_5_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  han_warring_missions_task_6: "Old City of Zheng and Han"
- han_warring_missions_task_6_DESC: ""
+ han_warring_missions_task_6_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  han_warring_missions_task_7: "Recruit Han Fei"
- han_warring_missions_task_7_DESC: ""
+ han_warring_missions_task_7_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  han_warring_missions_task_8: "Dismantle Qin"
- han_warring_missions_task_8_DESC: ""
+ han_warring_missions_task_8_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  han_warring_missions_task_9: "Backstab Wei"
- han_warring_missions_task_9_DESC: ""
+ han_warring_missions_task_9_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
 
  han_warring_missions_task_10: "Zhengguo Canal"
- han_warring_missions_task_10_DESC: ""
+ han_warring_missions_task_10_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  han_warring_missions_task_11: "Distract Qin"
- han_warring_missions_task_11_DESC: ""
+ han_warring_missions_task_11_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  han_warring_missions_task_12: "Han Feizi"
- han_warring_missions_task_12_DESC: ""
+ han_warring_missions_task_12_DESC: "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
  han_warring_missions_task_13: "Southern Jin"
- han_warring_missions_task_13_DESC: ""
+ han_warring_missions_task_13_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  han_warring_missions_task_14: "Northern Jin"
- han_warring_missions_task_14_DESC: ""
+ han_warring_missions_task_14_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
  han_warring_missions_task_15: "Agriculture of the Yellow River"
- han_warring_missions_task_15_DESC: ""
+ han_warring_missions_task_15_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  han_warring_missions_task_16: "War of Chinese Unification"
- han_warring_missions_task_16_DESC: ""
+ han_warring_missions_task_16_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  han_warring_missions_task_17: "Han Dynasty"
- han_warring_missions_task_17_DESC: ""
+ han_warring_missions_task_17_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
  
  han_warring_missions_task_18: "Crossbows and Sharp Swords"
- han_warring_missions_task_18_DESC: "It is said that Han crossbows can shoot 800 meters away and that their swords are also extremely sharp. They can 'cut off cattle and horses on land and geese on water' and 'cut through iron like butter when facing the enemy'."
+ han_warring_missions_task_18_DESC: "It is said that Han crossbows can shoot 800 meters away and that their swords are also extremely sharp. They can 'cut off cattle and horses on land and geese on water' and 'cut through iron like butter when facing the enemy'.\n\n\n\n\n\n\n\n\n\n\n@celt_mil1!"
 
 
  #Events 
