--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -8,76 +8,76 @@
 #Missions
 
  missions_chinese_empire_task_1:0 "Reform Civil Registration"
- missions_chinese_empire_task_1_DESC:0 ""
+ missions_chinese_empire_task_1_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  missions_chinese_empire_task_2:0 "Cornerstone of Empire"
- missions_chinese_empire_task_2_DESC:0 ""
+ missions_chinese_empire_task_2_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  missions_chinese_empire_task_3:0 "Expand Great Wall"
- missions_chinese_empire_task_3_DESC:0 ""
+ missions_chinese_empire_task_3_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  missions_chinese_empire_task_4:0 "The Nomadic Frontier"
- missions_chinese_empire_task_4_DESC:0 ""
+ missions_chinese_empire_task_4_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  missions_chinese_empire_task_5:0 "The Yue Tribes"
- missions_chinese_empire_task_5_DESC:0 ""
+ missions_chinese_empire_task_5_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  missions_chinese_empire_task_6:0 "The Southern Coast"
- missions_chinese_empire_task_6_DESC:0 ""
+ missions_chinese_empire_task_6_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  missions_chinese_empire_task_7:0 "Tribes of the Mountains"
- missions_chinese_empire_task_7_DESC:0 ""
+ missions_chinese_empire_task_7_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil4!"
 
  missions_chinese_empire_task_8:0 "Examination System"
- missions_chinese_empire_task_8_DESC:0 ""
+ missions_chinese_empire_task_8_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  missions_chinese_empire_task_9:0 "Build an Imperial Road"
- missions_chinese_empire_task_9_DESC:0 ""
+ missions_chinese_empire_task_9_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil27!"
 
  missions_chinese_empire_task_10:0 "Terracotta Army"
- missions_chinese_empire_task_10_DESC:0 ""
+ missions_chinese_empire_task_10_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  missions_chinese_empire_task_11:0 "Envoys to the West"
- missions_chinese_empire_task_11_DESC:0 ""
+ missions_chinese_empire_task_11_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  missions_chinese_empire_task_12:0 "Heavenly Horses"
- missions_chinese_empire_task_12_DESC:0 ""
+ missions_chinese_empire_task_12_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  missions_chinese_empire_task_13:0 "Kingdom of Joseon"
- missions_chinese_empire_task_13_DESC:0 ""
+ missions_chinese_empire_task_13_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  missions_chinese_empire_task_14:0 "Kingdom of Au Lac"
- missions_chinese_empire_task_14_DESC:0 ""
+ missions_chinese_empire_task_14_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
  missions_chinese_empire_task_15:0 "Silk and Salt"
- missions_chinese_empire_task_15_DESC:0 ""
+ missions_chinese_empire_task_15_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  missions_chinese_empire_task_16:0 "Meritocracy"
- missions_chinese_empire_task_16_DESC:0 ""
+ missions_chinese_empire_task_16_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  missions_chinese_empire_task_17:0 "Grand Commanderies"
- missions_chinese_empire_task_17_DESC:0 ""
+ missions_chinese_empire_task_17_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@event_pic7!"
 
  missions_chinese_empire_task_18:0 "Inward Perfection"
- missions_chinese_empire_task_18_DESC:0 ""
+ missions_chinese_empire_task_18_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil3!"
 
  missions_chinese_empire_task_19:0 "Silk Road"
- missions_chinese_empire_task_19_DESC:0 ""
+ missions_chinese_empire_task_19_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
 
  missions_chinese_empire_task_20:0 "The Advent of Paper"
- missions_chinese_empire_task_20_DESC:0 ""
+ missions_chinese_empire_task_20_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil18!"
 
  missions_chinese_empire_task_21:0 "Sail East"
- missions_chinese_empire_task_21_DESC:0 ""
+ missions_chinese_empire_task_21_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@india_mil7!"
 
  missions_chinese_empire_task_22:0 "Pure Land"
- missions_chinese_empire_task_22_DESC:0 ""
+ missions_chinese_empire_task_22_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@greek_mil2!"
 
  missions_chinese_empire_task_23:0 "Heaven's Will"
- missions_chinese_empire_task_23_DESC:0 ""
+ missions_chinese_empire_task_23_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
  
  missions_chinese_empire_task_24:0 "Lingqu Canal"
- missions_chinese_empire_task_24_DESC:0 ""
+ missions_chinese_empire_task_24_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
 
 #Events
@@ -219,7 +219,7 @@
  me_chinese_empire_2400_desc:0 ""
  me_chinese_empire_2400.a:0 ""
  
- me_chinese_empire_90_title:0 ""
+ me_chinese_empire_90_title:0 "The Empire of China"
  me_chinese_empire_90_desc:0 ""
  me_chinese_empire_90.a:0 ""
 
