--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -8,67 +8,67 @@
  #Missions
 
  zhou_missions_task_1:0 "End the Depression"
- zhou_missions_task_1_DESC:0 ""
+ zhou_missions_task_1_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  zhou_missions_task_2:0 "One Zhou, two Graves"
- zhou_missions_task_2_DESC:0 ""
+ zhou_missions_task_2_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  zhou_missions_task_3:0 "Sway the Han"
- zhou_missions_task_3_DESC:0 ""
+ zhou_missions_task_3_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  zhou_missions_task_4:0 "Punish Chu"
- zhou_missions_task_4_DESC:0 ""
+ zhou_missions_task_4_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  zhou_missions_task_5:0 "Control Wei"
- zhou_missions_task_5_DESC:0 ""
+ zhou_missions_task_5_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhou_missions_task_6:0 "Challenge Zhao"
- zhou_missions_task_6_DESC:0 ""
+ zhou_missions_task_6_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
  zhou_missions_task_7:0 "Subjugate Song"
- zhou_missions_task_7_DESC:0 ""
+ zhou_missions_task_7_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
  zhou_missions_task_8:0 "Dismantle Chu"
- zhou_missions_task_8_DESC:0 ""
+ zhou_missions_task_8_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  zhou_missions_task_9:0 "Unite Jin"
- zhou_missions_task_9_DESC:0 ""
+ zhou_missions_task_9_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  zhou_missions_task_10:0 "Curtail Qin"
- zhou_missions_task_10_DESC:0 ""
+ zhou_missions_task_10_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhou_missions_task_11:0 "Check the East"
- zhou_missions_task_11_DESC:0 ""
+ zhou_missions_task_11_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  zhou_missions_task_12:0 "Yolking Yi"
- zhou_missions_task_12_DESC:0 ""
+ zhou_missions_task_12_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
  zhou_missions_task_13:0 "End the Qin"
- zhou_missions_task_13_DESC:0 ""
+ zhou_missions_task_13_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
 
  zhou_missions_task_14:0 "Yeet Yan"
- zhou_missions_task_14_DESC:0 ""
+ zhou_missions_task_14_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
  zhou_missions_task_15:0 "Zhou Bureaucracy"
- zhou_missions_task_15_DESC:0 ""
+ zhou_missions_task_15_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  zhou_missions_task_16:0 "Agricultural Advancements"
- zhou_missions_task_16_DESC:0 ""
+ zhou_missions_task_16_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  zhou_missions_task_17:0 "Royal Inspectors"
- zhou_missions_task_17_DESC:0 ""
+ zhou_missions_task_17_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  zhou_missions_task_18:0 "Single Code of Law"
- zhou_missions_task_18_DESC:0 ""
+ zhou_missions_task_18_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@celt_mil1!"
 
  zhou_missions_task_19:0 "Unified Currency and Measures"
- zhou_missions_task_19_DESC:0 ""
+ zhou_missions_task_19_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  zhou_missions_task_20:0 "The Great Assembly"
- zhou_missions_task_20_DESC:0 ""
+ zhou_missions_task_20_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  zhou_missions_task_21:0 "Restore the Mandate"
- zhou_missions_task_21_DESC:0 ""
+ zhou_missions_task_21_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
 
  #Events
