--- a/localization/english/missions/wei_missions_l_english.yml
+++ b/localization/english/missions/wei_missions_l_english.yml
@@ -135,33 +135,33 @@
  me_wei_14_desc: "Now that some of our external enemies have been humbled, [ROOT.GetCountry.GetRuler.GetName] has turned [ROOT.GetCountry.GetRuler.GetHerHis] attention inward. Some of the greatest signs of the [ROOT.GetCountry.GetRulerTitle]'s interest in beautifying [ROOT.GetCountry.GetName] can be found in [GetProvince('(int32)8344').GetName] and [GetProvince('(int32)8446').GetName], the two cities that have repeatedly been the beneficiaries of the royal largesse.\n\nThanks to the investments made at the state level, Daliang has earned a reputation for being a 'beautiful city', which has attracted architects hoping to study the grand designs of the capital."
  me_wei_14.a: "Wars come and go, but architecture is a permanent legacy"
 
- me_wei_15_title:0 "$wei_missions_task_15$"
- me_wei_15_desc:0 ""
- me_wei_15.a:0 ""
+ me_wei_15_title: "$wei_missions_task_15$"
+ me_wei_15_desc: "When the territories of #E Jin#! were split, hacked to pieces as though a butcher had taken a cleaver to the borders, most people living in the Middle Kingdom never could have imagined that a personality would be able to put together what was sundered so long ago.\n\nBut [ROOT.GetCountry.GetRuler.GetName] is unlike any other ruler that [ROOT.GetCountry.GetName] has ever had; not only has [ROOT.GetCountry.GetRuler.GetSheHe] managed to lose the shameful legacy of our past defeats, but the bold [ROOT.GetCountry.GetRulerTitle] has restored Jin. The immortal deeds and accomplishments of [ROOT.GetCountry.GetRuler.GetFirstName] shall go down in the histories as the Promised One that corrected the mistakes of the past."
+ me_wei_15.a: "The shades of my ancestors are pleased by my accomplishments"
 
- me_wei_16_title:0 "$wei_missions_task_16$"
- me_wei_16_desc:0 ""
- me_wei_16.a:0 ""
+ me_wei_16_title: "$wei_missions_task_16$"
+ me_wei_16_desc: "[ROOT.GetCountry.GetRuler.GetName]'s father, [GetCharacter('(int32)511').GetName], was said to be an extravagant man - a lover of wine, song and philosophy. Although [ROOT.GetCountry.GetRuler.GetFirstName] rejects the idea that the court of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] is still a decadent place, [ROOT.GetCountry.GetRuler.GetSheHe] admits that [ROOT.GetCountry.GetCapital.GetName] was more interesting back when artists and poets lived at the capital.\n\nNow that [ROOT.GetCountry.GetName] has disposable funds, the [ROOT.GetCountry.GetRulerTitle] has decreed that [ROOT.GetCountry.GetRuler.GetSheHe] has need of scholars and philosophers."
+ me_wei_16.a: "We will see who shows up...we could use some excitement"
  
- me_wei_1600_title:0 "$wei_missions_task_16$"
- me_wei_1600_desc:0 ""
- me_wei_1600.a:0 ""
+ me_wei_1600_title: "$wei_missions_task_16$"
+ me_wei_1600_desc: "[ROOT.GetCountry.GetRuler.GetName], pardon the intrusion, but I wanted to tell you that in about one month's time, we are expecting the arrival of some philosophers and scholars to the capital. It seems that your call for the wise to join us in [ROOT.GetCountry.GetCapital.GetName] has not gone unheeded."
+ me_wei_1600.a: "Splendid news! I eagerly await our guests"
  
- me_wei_1601_title:0 "$wei_missions_task_16$"
- me_wei_1601_desc:0 ""
- me_wei_1601.a:0 ""
+ me_wei_1601_title: "$wei_missions_task_16$"
+ me_wei_1601_desc: "A few weeks have gone by, and [ROOT.GetCountry.GetRuler.GetName] has spent a great deal of time consorting with a scholar that arrived from [GetCountry('QII').GetName]. Many hours have been spent reading scrolls in the royal library, with conversations that cover the breadth and depth of all scientific and historical inquiries. Word is spreading around [ROOT.GetCountry.GetCapital.GetName] of the penetrating questions asked by the [ROOT.GetCountry.GetRulerTitle], and it has been said that, in another life, [ROOT.GetCountry.GetRuler.GetFirstName] might have been a famous scholar in [ROOT.GetCountry.GetRuler.GetHerHis] own right." 
+ me_wei_1601.a: "Thank you for the discussion - it was riveting"
  
- me_wei_1602_title:0 "$wei_missions_task_16$"
- me_wei_1602_desc:0 ""
- me_wei_1602.a:0 ""
+ me_wei_1602_title: "$wei_missions_task_16$"
+ me_wei_1602_desc: "One morning, [ROOT.GetCountry.GetRuler.GetName] was surprised to find an inventor at the gates of [ROOT.GetCountry.GetCapital.GetName], asking for an audience with the [ROOT.GetCountry.GetRulerTitle]. It appears that this traveler, a former resident of [GetCountry('ZOU').GetName], had heard the call for men of talent to travel to the capital and seized the opportunity.\n\nWhen asked by the guards what this stranger could offer to the people of [GetCountry('WEI').GetName], he proclaimed that he was a skilled engineer and would be able to share an innovation with our countrymen."
+ me_wei_1602.a: "Well, why didn't you say so in the first place?"
 
- me_wei_17_title:0 "$wei_missions_task_17$"
- me_wei_17_desc:0 ""
- me_wei_17.a:0 ""
+ me_wei_17_title: "$wei_missions_task_17$"
+ me_wei_17_desc: "A new Emperor sits on the throne of a newly-proclaimed #E Chinese Empire#!, and the steady stream of tributes from barbarians and petty kings pours into [ROOT.GetCountry.GetCapital.GetName], the seat of the royal power.\n\nWhen [ROOT.GetCountry.GetRuler.GetName] first assumed the responsibilities of the kingdom of [GetCountry('WEI').GetName], the people had prayed for a wise ruler that could guide them through a difficult time...but no one was expecting that [ROOT.GetCountry.GetRuler.GetFirstName] would be the one to unify all of the #E Middle Kingdom#!. Not only was Jin restored by the hand of [ROOT.GetCountry.GetRuler.GetFirstName], but now, the greatest Empire to rule over the civilized world has been forged by the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective]."
+ me_wei_17.a: "My name shall never be forgotten..."
  
- me_wei_18_title:0 "$wei_missions_task_18$"
- me_wei_18_desc:0 ""
- me_wei_18.a:0 ""
+ me_wei_18_title: "$wei_missions_task_18$"
+ me_wei_18_desc: "With an eye on [ROOT.GetCountry.GetRuler.GetHerHis] own legacy, [ROOT.GetCountry.GetRuler.GetName] has recently commissioned a grand history to be composed within [ROOT.GetCountry.GetCapital.GetName]. A few short months later, the investment made by the [ROOT.GetCountry.GetRulerTitle] has paid off.\n\nThis text, which has been given the name the #E Bamboo Annals#!, covers an extensive period of history - from the reign of the #E Yellow Emperor#! up until present times. It is the hope of the people of [ROOT.GetCountry.GetName] that these histories will be instructive for our people, and will serve as a tool to train them in the morally correct ways."
+ me_wei_18.a: "The study of history can be edifying"
  
  me_wei_19_title: "$wei_missions_task_19$"
  me_wei_19_desc: "Thanks to the ports that [ROOT.GetCountry.GetRuler.GetName] has built along the #E Yellow River#!, our administrators in charge of the region's finances have submitted a glowing report to the [ROOT.GetCountry.GetRulerTitle].\n\nAll of the metrics are positive; incomes and taxes are growing, new trade routes are being established, and merchants are permanently settling in the region. What a brilliant course of action, [ROOT.GetCountry.GetRuler.GetFirstName]!"
