first pass through Lu

--- a/localization/english/missions/lu_missions_l_english.yml
+++ b/localization/english/missions/lu_missions_l_english.yml
@@ -1,65 +1,65 @@
 ﻿l_english:
 
- lu_missions: "Rituals of Lu"
- lu_missions_DESCRIPTION: "Hundreds of years ago the Lu state was established in Qufu and given to Bo Qin by the Duke of Zhou. For many generations we have ruled over these lands however the Lu are not as strong as they once were. Ever since the great Battle of Changshao many years ago our power has been waning in the shadow of the states of Qi and Chu. For many years the Three Huan a group of 3 powerful families held our great state of Lu in a stranglehold, it wasn't until the time of Confucius many generations ago that the power of the Duke's of Lu was once again restored. Today times are as uncertain as ever, all of China is at each others throats and the once great power of the Zhou Emperor is fading more with each day. The ever expanding power of the Qi and Chu has put the stability of our once great state in peril, only time will tell what history has in store for the legendary dukes of Lu."
- lu_missions_CRITERIA_DESCRIPTION: "This mission will be completed when Lu has defeated the other states of China!"
+ lu_missions: "Rituals Of Lu"
+ lu_missions_DESCRIPTION: "Hundreds of years ago, the [GetCountry('LUU').GetName)] state was established in [GetProvince('(int32)8533').GetName] and given to Bo Qin by the Duke of Zhou. For many generations we have ruled over these lands, but the Lu are not as strong as they once were.\n\nEver since the great #! Battle of Changshao#! many years ago, our power has been waning in the shadow of the states of [GetCountry('QIIU').GetName)] and [GetCountry('CHU').GetName)]. For many years, the #E Three Huan#!, a group of three powerful families, held our great state of Lu in a stranglehold, and it wasn't until the time of Confucius many generations ago that the power of the Duke's of Lu was once again restored.\n\nToday, times are as uncertain as ever; all of the kings of the #E Middle Kingdom#! are at each other's throats, and the oncegreat power of the #E Zhou Emperor#! is fading more with each day. The ever-expanding power of the Qi and Chu has put the stability of our once great state in peril; only time will tell what history has in store for the legendary dukes of Lu."
+ lu_missions_CRITERIA_DESCRIPTION: "This mission will be completed when Lu has defeated its rival states of the Middle Kingdom."
  lu_missions_BUTTON_TOOLTIP: "Glory can only be achieved by those bold enough to claim it!"
 
  #Missions
 
  # Battle of Changshao was last time Lu > Qi
- lu_missions_task_1: "Arming for War"
- lu_missions_task_1_DESC: "It is clear that the time for war is quickly approaching, the only question that remains is with who and when. Many in our nation suggest we prepare ourselves immediately for the ensuing struggle that seems to be all but inevitable at this point..."
+ lu_missions_task_1: "Arming For War"
+ lu_missions_task_1_DESC: "It is clear that the time for war is quickly approaching, but the only question that remains is with whom and when. Many in our nation suggest that we prepare ourselves immediately for the ensuing struggle that seems to be all but inevitable at this point... \n\n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
  # Lu was a famous country of etiquette. The close relationship between the Lu State and the Zhou rites resulted in the formation of a simple folk custom of humility and courtesy in the Lu State. At the same time, it also greatly affected the development of the Lu State's national power. When the rites and music in the Spring and Autumn Period collapsed, people at that time still said that Lu still upheld the rites of Zhou. 
  lu_missions_task_2: "Lu Etiquette"
- lu_missions_task_2_DESC: "Although many of the surrounding Zhou dynasties have abandoned the countless formal rites and rituals of the once great dynasty the Dukes of Lu have never once wavered in their undying loyalty to the great traditions of the past. Proper etiquette has always been a commonality among all competent Lu statesmen. Even though over time the many states around us have left the old ways behind them the never ending tides of time have yet to change the ways of Lu."
+ lu_missions_task_2_DESC: "Although many of the surrounding [GetCountry('ZHO').GetName)] dynasties have abandoned the countless formal rites and rituals of the once great Dynasty, the Dukes of [GetCountry('LUU').GetName)] have never once wavered in their undying loyalty to the esteemed traditions of the past.\n\n Proper etiquette has always been a commonality among all competent Lu statesmen. Even though, over time, the many states around us have left the old ways behind them, the never-ending tides of time have yet to change the ways of Lu. \n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
- lu_missions_task_3: "Dominate the Small States"
- lu_missions_task_3_DESC: "Many minor Zhou states can be found just outside of our borders. Several prominent statesmen in the Lu court suggest we seize these lands for ourselves to strengthen our position before an inevitable confrontation with a much larger power arises."
+ lu_missions_task_3: "Dominate The Small States"
+ lu_missions_task_3_DESC: "Many minor Zhou states can be found just outside of our borders. Several prominent statesmen in the Lu court suggest we seize these lands for ourselves to strengthen our position before an inevitable confrontation with a much larger power arises. \n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  lu_missions_task_4: "Seize Song"
- lu_missions_task_4_DESC: "The Song dynasty on our southern border are the logical target for any kind of conquest we want to embark upon. A direct confrontation with the larger states of Qi or Chu at this point could lead to our demise. Seizing the lands of Song would strengthen our position and perhaps even deter any would be invaders."
+ lu_missions_task_4_DESC: "The [GetCountry('SNG').GetName)] Dynasty on our southern border are the logical target for any kind of conquest we want to embark upon. A direct confrontation with the larger states of [GetCountry('QII').GetName)] or [GetCountry('CHU').GetName)] at this point could lead to our demise. Seizing the lands of Song would strengthen our position and perhaps even deter any would-be invaders. \n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
  
  #The State of Lu became the preserver and implementer of typical Zhou rites , and the world said that all Zhou rites are in Lu. When princes from various countries knew about Zhou rites, they often went to Lu to study them
- lu_missions_task_5: "Land of All Rituals and Music"
- lu_missions_task_5_DESC: ""
+ lu_missions_task_5: "Land Of All Rituals And Music"
+ lu_missions_task_5_DESC: "While some of our neighbors have forgotten the proper rituals and have abandoned the study of Zhou traditions, particularly the usage of music at court, the citizens of [GetCountry('LUU').GetName)] have kept the ways of our forebears close to our hearts. \n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  #Huanen were three side branches spawned by ruler Huanen. They dominated the state until Mu defeated two of three. The third became an independent country, Bi.
- lu_missions_task_6: "Destroy the Last Huanen" 
- lu_missions_task_6_DESC: ""
+ lu_missions_task_6: "Destroy The Last Huanen" 
+ lu_missions_task_6_DESC: "While the iron grip of the #Y Huanen#! has been pried off of the state of [GetCountry('LUU').GetName)], there still remains one final warlord to topple - we cannot allow these nobles to dominate our kingdom any longer! \n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  lu_missions_task_7: "Weaken Qi"
- lu_missions_task_7_DESC: ""
+ lu_missions_task_7_DESC: "The strength of [GetCountry('QII').GetName)] hovers on the horizon like a rumbling cloud, and the approaching storm threatens to rain blood upon the fields of [GetCountry('LUU').GetName)]. We must take steps to weaken our rivals, lest we find their levies camped outside the walls of [ROOT.GetCountry.GetCapital.GetName]. \n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  lu_missions_task_8: "Confucius Says"
- lu_missions_task_8_DESC: ""
+ lu_missions_task_8_DESC: "The writings and sayings of the esteemed philosopher #Y Confucius#! are worth studying and emulating, for there are many valuable lessons to be found in his teachings. It is the policy of [GetCountry('LUU').GetName)] that the Word of Confucius be taught throughout our kingdom. \n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
- lu_missions_task_9: "Temple of Confucius"
- lu_missions_task_9_DESC: ""
+ lu_missions_task_9: "Temple Of Confucius"
+ lu_missions_task_9_DESC: "The birth place of the legendary philosopher Confucius, [GetProvince('(int32)8533').GetName], has long been a place of informal piligrimage for those that wish to pay homage to the greatest of teachers. It has been decred by [ROOT.GetCountry.GetRuler.GetName] that a temple honoring the sage should be built in his hometown. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
  lu_missions_task_10: "Check Chu"
- lu_missions_task_10_DESC: ""
+ lu_missions_task_10_DESC: "The corrupt behemoth [GetCountry('CHU').GetName)] is like a plum rotting on the branch, swollen and ready to burst at any time. Now that [GetCountry('LUU').GetName)] has an army that can properly defend our interests, the time has come to check the might of the southerners. \n\n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
  # Annals preserved many records of astronomical observations, astronomer Gan De was likely born in Lu, but moved to Qi.
  lu_missions_task_11: "Finance Astronomy"
- lu_missions_task_11_DESC: ""
+ lu_missions_task_11_DESC: "There is a brilliant astronomer living within our borders, a man named #E Gan De#!, who claims that if is properly funded by the state, he will be able to chart the course of the stars and divine their celestial secrets. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
  lu_missions_task_12: "Destroy Qi"
- lu_missions_task_12_DESC: ""
+ lu_missions_task_12_DESC: "Now that [GetCountry('QII').GetName)] has been mortally wounded by our forces - for how can they survive without their capital of [GetProvince('(int32)8504').GetName] - [ROOT.GetCountry.GetRuler.GetName] has decided that the time has come to deliver the killing blow. Qi must be absolutely destroyed! \n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
  lu_missions_task_13: "Liberate Yue" #invited Yue to crush Huanen
- lu_missions_task_13_DESC: ""
+ lu_missions_task_13_DESC: "The Yue people have suffered long enough under tyrannical regimes, but [ROOT.GetCountry.GetRuler.GetName] will tolerate this aberration no longer. Gather the levies of [ROOT.GetCountry.GetName] and send them to the south to liberate the Yue! \n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  lu_missions_task_14: "Western Brethren" #Dukes of Lu descend from Zhou
- lu_missions_task_14_DESC: ""
+ lu_missions_task_14_DESC: "It is known by all that the Dukes of [GetCountry('LUU').GetName)] are distant kinsmen of the royalty of [GetCountry('ZHO').GetName)], and although the passage of time has weakened these links, they still remain our brothers. \n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  # Were written in Lu and counting of years was according to the rulers of Lu
  lu_missions_task_15: "Spring and Autumn Annals"
- lu_missions_task_15_DESC: ""
+ lu_missions_task_15_DESC: "While the many deeds and accomplishments of the Kings of [GetCountry('LUU').GetName)] are already immortal, there is the fear that, unless these histories are recorded for posterity, the ravages of time will diminish the memory of our legendary ancestors. We must compose a chronicle, one for the ages - we must write the #Y Spring and Autumn Annals#!. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil9!"
 
  lu_missions_task_16: "Shaohao's Ruins"  #see deity Shaohao
- lu_missions_task_16_DESC: ""
+ lu_missions_task_16_DESC: "Long ago, it is said that the legendary ruler #E Shaohao#!, the son of the #Y Yellow Emperor#!, moved the capital to [GetProvince('(int32)8533').GetName], and his humble tomb can still be seen on the outskirts of the city.\n\nIn order to pay homage to this great leader, [ROOT.GetCountry.GetRuler.GetName] has decreed that the city be expanded - a fitting legacy for this mysterious figure. \n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
 
  #Events
@@ -172,15 +172,15 @@
  #Tooltips
  lu_missions_task_1_marshal_7: "Our marshal has a martial skill of at least 7."
  lu_missions_task_3_offer_small_states: "We will offer our smaller southern neighbors to become our feudatories."
- lu_missions_task_1_claims: "TODO CLAIMS"
- lu_missions_task_4_claims: "TODO CLAIMS"
- lu_missions_task_7_claims: "TODO CLAIMS"
- lu_missions_task_10_claims: "TODO CLAIMS"
- lu_missions_task_12_claims: "TODO CLAIMS"
+ lu_missions_task_1_claims: "We will receive claims on the #Y Linzi#!, #Y Langya#!, #Y Jinan#!, #Y Taishan#! and #Y Dong#! areas."
+ lu_missions_task_4_claims: "We will receive claims on the #Y Pei#!, #Y Jiujiang#!, #Y Linhuai#!, #Y Lujiang#! and #Y Donghai#! areas."
+ lu_missions_task_7_claims: "We will receive claims on every province owned by #Y Qi#!."
+ lu_missions_task_10_claims: "We will receive claims on the #Y Guangling#!, #Y Yangcheng#!, #Y Wu#!, #Y Danyang#!, #Y Yuzhang#! and #Y Kuaiji#! areas."
+ lu_missions_task_12_claims: "We will receive claims on every province in the #Y Yue#! region."
  
  #Treasures
  lu_spring_autumn_annals: "Spring and Autumn Annals"
- lu_spring_autumn_annals_desc: "TODO"
+ lu_spring_autumn_annals_desc: "The records and histories of the kingdom of Lu have been assembled into one masterwork, known as the Spring and Autumn Annals."
  
  #Modifiers
  lu_etiquette_mod: "$lu_missions_task_1$"
