Smallest Lu Lu Loc Updates

--- a/localization/english/missions/lu_missions_l_english.yml
+++ b/localization/english/missions/lu_missions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- lu_missions: "Rituals Of Lu"
+ lu_missions: "All Zhou Rituals Are In Lu"
  lu_missions_DESCRIPTION: "Hundreds of years ago, the [GetCountry('LUU').GetName)] state was established in [GetProvince('(int32)8533').GetName] and given to Bo Qin by the Duke of Zhou. For many generations we have ruled over these lands, but the Lu are not as strong as they once were.\n\nEver since the great #! Battle of Changshao#! many years ago, our power has been waning in the shadow of the states of [GetCountry('QIIU').GetName)] and [GetCountry('CHU').GetName)]. For many years, the #E Three Huan#!, a group of three powerful families, held our great state of Lu in a stranglehold, and it wasn't until the time of Confucius many generations ago that the power of the Duke's of Lu was once again restored.\n\nToday, times are as uncertain as ever; all of the kings of the #E Middle Kingdom#! are at each other's throats, and the oncegreat power of the #E Zhou Emperor#! is fading more with each day. The ever-expanding power of the Qi and Chu has put the stability of our once great state in peril; only time will tell what history has in store for the legendary dukes of Lu."
  lu_missions_CRITERIA_DESCRIPTION: "This mission will be completed when Lu has defeated its rival states of the Middle Kingdom."
  lu_missions_BUTTON_TOOLTIP: "Glory can only be achieved by those bold enough to claim it!"
@@ -16,10 +16,10 @@
  lu_missions_task_2_DESC: "Although many of the surrounding [GetCountry('ZHO').GetName)] dynasties have abandoned the countless formal rites and rituals of the once great Dynasty, the Dukes of [GetCountry('LUU').GetName)] have never once wavered in their undying loyalty to the esteemed traditions of the past.\n\n Proper etiquette has always been a commonality among all competent Lu statesmen. Even though, over time, the many states around us have left the old ways behind them, the never-ending tides of time have yet to change the ways of Lu. \n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  lu_missions_task_3: "Dominate The Small States"
- lu_missions_task_3_DESC: "Many minor Zhou states can be found just outside of our borders. Several prominent statesmen in the Lu court suggest we seize these lands for ourselves to strengthen our position before an inevitable confrontation with a much larger power arises. \n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
+ lu_missions_task_3_DESC: "Many minor states can be found just outside of our southern borders; they have traditionally always been part of our sphere of influence. Several prominent statesmen in the Lu court suggest we tighten the grip on these to strengthen our position before an inevitable confrontation with a much larger power arises. \n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  lu_missions_task_4: "Seize Song"
- lu_missions_task_4_DESC: "The [GetCountry('SNG').GetName)] Dynasty on our southern border are the logical target for any kind of conquest we want to embark upon. A direct confrontation with the larger states of [GetCountry('QII').GetName)] or [GetCountry('CHU').GetName)] at this point could lead to our demise. Seizing the lands of Song would strengthen our position and perhaps even deter any would-be invaders. \n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
+ lu_missions_task_4_DESC: "The [GetCountry('SNG').GetName)] on our southern border are the logical target for any kind of conquest we want to embark upon. A direct confrontation with the larger states of [GetCountry('QII').GetName)] or [GetCountry('CHU').GetName)] at this point could lead to our demise. Seizing the lands of Song would strengthen our position and perhaps even deter any would-be invaders. \n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
  
  #The State of Lu became the preserver and implementer of typical Zhou rites , and the world said that all Zhou rites are in Lu. When princes from various countries knew about Zhou rites, they often went to Lu to study them
  lu_missions_task_5: "Land Of All Rituals And Music"
@@ -193,12 +193,12 @@
  confucius_lu_mod: "Word of Confucius"
  revenge_of_last_huanen: "Revenge of the Last Huanen"
  desc_lu_etiquette_mod: "Lu Etiquette"
- #battle_of_changshao_mod_desc: "TODO MOD"
- #lu_rituals_music_mod_desc: "TODO MOD"
- #shahoa_ruins_mod_desc: "TODO MOD"
- #destroyed_last_huanen_desc: "TODO MOD"
- #temple_of_confucius_country_mod_desc: "TODO MOD"
- #temple_of_confucius_state_mod_desc: "TODO MOD"
- #confucius_lu_mod_desc: "TODO MOD"
- #revenge_of_last_huanen_desc: "TODO MOD"
+ battle_of_changshao_mod_desc: "We have learnt from our past victories over Qi how to defeat them."
+ lu_rituals_music_mod_desc: "All of China knows that Lu is the land of rituals and music."
+ shahoa_ruins_mod_desc: "Our great city expands upon Shaohao's capital."
+ destroyed_last_huanen_desc: "The power of the three Huanen is no more, so we are no longer subject to their whims and wishes."
+ temple_of_confucius_country_mod_desc: "In these noble halls, the most revered Confucius is venerated."
+ temple_of_confucius_state_mod_desc: "$temple_of_confucius_state_mod_desc$"
+ confucius_lu_mod_desc: "It is time to spread the word of Confucius far and wide."
+ revenge_of_last_huanen_desc: "We, the last of the Huanen have overthrown the corrupt rulers of the main Lu branch."
  lu_etiquette_opinion_mod: "Introduced Lu Etiquette"
