--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -321,6 +321,7 @@
  yue_start: "#T Yue#!\nDifficulty: #Y Hard#!\n\n$yue_heritage_desc$"
  minyue_start: "#T Minyue#!\nDifficulty: #Y Hard#!\n\n$minyue_heritage_desc$"
  lu_start: "#T Lu#!\nDifficulty: #Y Hard#!\n\n$lu_heritage_desc$"
+ dian_start: "#T Dian#!\nDifficulty: #Y Hard#!\n\n$dian_heritage_desc$"
 
  sapmi_start: "#T Skirithfinia#!\nDifficulty: #Y Medium#!\n\n$skirithfinia_heritage_desc$"
 
