Account for New Yan Provinces

--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -215,11 +215,10 @@
  yan_missions_task_13_claims_tt: "We will receive claims on every province in the #Y Bing#! region."
  yan_missions_task_2_all_rebuilt_provinces_get: "All rebuilt provinces will get:"
  yan_missions_task_19_attempt_assassination: "We will attempt an assassination plot on the Emperor of Qin."
- yan_missions_task_2_two_reservois_in_zhuo_yuyang_bohai_shanggu: "We need at least two reservoirs in the Areas of Zhuo, Yuyang, Bohai or Shanggu."
+ yan_missions_task_2_two_reservois_in_zhuo_yuyang_bohai_shanggu: "We need at least two reservoirs in the Areas of Zhuo, Yuyang, Bohai, Zhongshan or Shanggu."
  yan_missions_task_5_3_chinese_allies: "We have at least three Chinese allies."
- yan_missions_task_2_three_farms_in_zhuo_yuyang_bohai_shanggu: "We need at least three farming settlements in the Areas of Zhuo, Yuyang, Bohai or Shanggu."
+ yan_missions_task_2_three_farms_in_zhuo_yuyang_bohai_shanggu: "We need at least three farming settlements in the Areas of Zhuo, Yuyang, Bohai, Zhongshan or Shanggu."
  is_in_jin_region: "Is in the Region of Jin."
- yan_missions_task_6_iron_mine_in_zhuo_yuyang_bohai_shanggu: "We need at least one iron mine in the Areas of Zhuo, Yuyang, Bohai or Shanggu."
- yan_missions_task_6_base_metals_mine_in_zhuo_yuyang_bohai_shanggu: "We need at least one base metals mine in the Areas of Zhuo, Yuyang, Bohai or Shanggu."
+ yan_missions_task_6_iron_mine_in_zhuo_yuyang_bohai_shanggu: "We need at least one iron mine in the Areas of Zhuo, Yuyang, Bohai, Zhongshan or Shanggu."
+ yan_missions_task_6_base_metals_mine_in_zhuo_yuyang_bohai_shanggu: "We need at least one base metals mine in the Areas of Zhuo, Yuyang, Bohai, Zhongshan or Shanggu."
  yan_missions_task_4_recruit: "We will attempt recruiting foreign talents."
- yan_missions_task_19_more_resources_better: "#Y More resources will improve our odds.#!"
