--- a/localization/english/events/FMO_CFT_event_chains_l_english.yml
+++ b/localization/english/events/FMO_CFT_event_chains_l_english.yml
@@ -235,6 +235,12 @@
  lifestyle_event_chains.48.t: "TODO"
  lifestyle_event_chains.48.desc: "TODO"
  lifestyle_event_chains.48.a: "TODO"
+ 
+ #Treasures
+ orichalcian_map_of_atlantis: "Orichalcian Map of Atlantis"
+ orichalcian_map_of_atlantis_desc: "This is a map made out of orichalcum Orichalcian that shows the legendary city of Atlantis."
+ bronze_age_sword: "Prehistoric Bronze Sword"
+ bronze_age_sword_desc: "There is no one left to remember the wielder of this fine bronze sword, no one to tell its story, but its old age is clear to everyone."
 
  #Modifiers
  master_minter_mod: "Master Minter"
