a tiny bit of han

--- a/localization/english/missions/han_missions_warring_l_english.yml
+++ b/localization/english/missions/han_missions_warring_l_english.yml
@@ -7,11 +7,11 @@
 
  #Missions
 
- han_warring_missions_task_1: "Lobby Zhao"
- han_warring_missions_task_1_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
+ han_warring_missions_task_1: "Lobby Zhou"
+ han_warring_missions_task_1_DESC: "It makes sense for [ROOT.GetCountry.GetRuler.GetName] to curry favor with the #E Emperor#! living in [GetProvince('(int32)8379').GetName]; once we have raised their opinions of us, the prestige that we shall gain from a harmonious relationship will be well worth the cost. \n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  han_warring_missions_task_2: "Partition Chu"
- han_warring_missions_task_2_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
+ han_warring_missions_task_2_DESC: "As our armies begin to make inroads throughout lands once held by the [GetCountry('CHU').GetName)], it has been decided that we shall partition the rest of their holdings.\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  han_warring_missions_task_3: "Legacy of Shen Buhai"
  han_warring_missions_task_3_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
@@ -166,9 +166,9 @@
  han_warring_missions_task_15_seven_farms_yellow_river: "We have at least seven farming settlements along the upper Yellow River."
  han_warring_missions_task_12_has_office: "Han Fei is religious researcher."
  han_warring_missions_task_4_form_coalition_against_qin: "We will try to form a coalition against Qin."
- han_warring_missions_task_2_claims: "TODO"
- han_warring_missions_task_8_claims: "TODO"
- han_warring_missions_task_9_claims: "TODO"
+ han_warring_missions_task_2_claims: "We will receive claims on the #Y Xianyang#!, #Y Yueyang#!, #Y Changan#! and #Y Hongnong#! areas."
+ han_warring_missions_task_8_claims: "We will receive claims on the #Y Taiyuan#! and #Y Shangdang#! areas."
+ han_warring_missions_task_9_claims: "We will receive claims on every province in the #Y Yu#! region."
  han_warring_missions_task_5_fort_in_hedong_shangdang_area: "We have at least one fort in the Areas of Hedong or Shangdang."
  han_warring_missions_task_11_qin_builds_canal: "We will entice Qin to build the canal."
  han_warring_missions_task_18_trigger_tt: "We have a legion with at least 10 archers and 10 heavy infantry."
@@ -180,7 +180,7 @@
  #Modifiers
  han_final_mod: "Han Dynasty"
  han_yellow_river_mod: "Yellow River"
- lobbied_as_han: "Support from Zhao"
+ lobbied_as_han: "Support from Zhou"
  han_capital_mod: "Old City of Zheng and Han"
  zhengguo_canal_mod: "Zhengguo Canal"
  han_feizi_mod: "Commissioned Han Feizi"
